# todotxt-rs

./: Cargo.toml  LICENSE  README.adoc  README.md
todotxt-cli/: Cargo.toml  README.adoc  README.md
todotxt-cli/src/: main.rs
todotxt-cli/tests/: cli_tests.rs
todotxt-lib/: Cargo.toml  README.adoc  README.md
todotxt-lib/src/: config.rs  lib.rs
