[package]
edition = "2021"
name = "todotxt-cli"
version = "0.1.0"
description = "Ask more of your todo.txt file - CLI binary"
authors = ["Florent Nuttens"]
license = "MIT"

[dependencies]
todotxt-lib = { path = "../todotxt-lib" }
clap = { version = "3", features = ["cargo"] }
chrono = "0.4"
colored = "2"
